overflow fix voor rechter pijltje

--- a/style.less
+++ b/style.less
@@ -147,7 +147,7 @@ html {
 // usp pijlen
 .usp-pijl-rechts::before {
   content: "";
-  margin-right: -24px;
+  margin-right: -20px;
   position: absolute;
   top: 0;
   right: 0;
